--- a/gai/css/style.css
+++ b/gai/css/style.css
@@ -1,1 +1,502 @@
-gddgd
+.menu-main {
+  list-style: none;
+  margin: 40px 0 5px;
+  padding: 25px 0 5px;
+  text-align: center;
+  background: rgb(0, 0, 0);
+ 
+}
+.menu-main li 
+{display: inline-block;}
+
+.menu-main li:after {
+  content: "|";
+  color: #ffffff;
+  display: inline-block;
+}
+.menu-main li:last-child:after {content: none;}
+.menu-main a {
+  text-decoration: none;
+  font-family: 'Ubuntu Condensed', sans-serif;
+  letter-spacing: 2px;
+  position: relative;
+  padding-bottom: 20px;
+  margin: 0 34px 0 30px;
+  font-size: 17px;
+  text-transform: uppercase;
+  display: inline-block;
+  transition: color .2s;
+}
+.menu-main a, .menu-main a:visited {color: #9d999d;}
+.menu-main a.current, .menu-main a:hover{color: #C1B26D;}
+.menu-main a:before,
+.menu-main a:after {
+  content: "";
+  position: absolute;
+  height: 4px;
+  top: auto;
+  right: 50%;
+  bottom: -5px;
+  left: 50%;
+  background: #C1B26D;
+  transition: .8s;
+}
+.menu-main a:hover:before, .menu-main .current:before {left: 0;}
+.menu-main a:hover:after, .menu-main .current:after {right: 0;}   
+
+.body {
+  font-family: 'Ubuntu Condensed', sans-serif;
+  font-family: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+ 
+}
+.bg{
+  background-image: url(../img/1.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  text-align: center;
+  height: 100vh;
+  position: relative;
+}
+.h1text{
+  font-family: 'Ubuntu Condensed', sans-serif;
+  width: 412px;
+  margin: 0 auto;
+  color: #ffffff;
+ padding-top: 10px;
+ padding-left: 10px;
+ border: 5px solid #C1B26D;
+ margin-top: 300px;
+ padding-bottom: 10px;
+ font-size: 30px;
+}
+.h2text{
+  font-family: 'Ubuntu Condensed', sans-serif;
+ color: #ffffff;
+ text-align: center;
+ font-size: 48px;
+ color: black;
+ margin-top: 50px;
+ margin-bottom: 50px;
+ list-style: none;
+}
+.car{
+  width: 50%;
+  height: auto;
+  margin: 20px auto;
+  display: flex;
+}
+.content{
+  font-size: 18px;
+  text-align: center;
+}
+.content1{
+  font-size: 18px;
+  text-align: center;
+}.content2{
+  font-size: 18px;
+  text-align: center;
+}
+
+.grid {
+  text-align: center;
+  display: grid;
+  grid-template-areas: "a b c" "d e f";
+  grid-gap: 28px;
+  margin-top: 59px;
+  margin-bottom: 147px;
+}
+.grid-item {
+  background-color: #f7f7f7;
+  padding: 56px 30px 36px;
+}
+.grid-item h3 {
+  line-height: 1.5;
+  margin-top: 14px;
+}
+.grid-one {
+  grid-area: a;
+}
+.grid-two {
+  grid-area: b;
+}
+.grid-tgree {
+  grid-area: c;
+}
+.grid-four {
+  grid-area: d;
+}
+.grid-five {
+  grid-area: e;
+}
+.grid-six {
+  grid-area: f;
+}
+.grid-photo {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+.grid-photo-item {
+  height: 100%;
+  position: relative;
+}
+.grid-photo-item::before {
+  content: '';
+  background-color: rgba(64,65,73,0.5);
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transition: 0.3s;
+}
+.grid-photo-item:hover::before {
+  background-color: rgba(64,65,73,0.5);
+}
+.grid-photo-item img {
+  width: 100%;
+  height: 100%;
+}
+.box-feedback1 {
+  font-family: 'Ubuntu Condensed', sans-serif;
+  display: flex;
+  margin-top: 55px;
+  margin-bottom: 123px;
+  font-size: 24px;
+  background-color: #f7f7f7;
+  color: #999999;
+  padding:31px 30px;
+  margin-bottom: 31px;
+}
+.box-feedback2 {
+  font-family: 'Ubuntu Condensed', sans-serif;
+  display: flex;
+  margin-top: 55px;
+  margin-bottom: 123px;
+  font-size: 24px;
+  background-color: #f7f7f7;
+  color: #999999;
+  padding:31px 30px;
+  margin-bottom: 31px;
+}
+
+.box-feedback3 {
+  font-family: 'Ubuntu Condensed', sans-serif;
+  display: flex;
+  margin-top: 55px;
+  margin-bottom: 123px;
+  font-size: 24px;
+  background-color: #f7f7f7;
+  color: #999999;
+  padding:31px 30px;
+  margin-bottom: 31px;
+}
+
+/*слайдер*/
+.wrapper {
+	height: 500px;
+	margin: 100px auto 0;
+	position: relative;
+	width: 900px;
+}
+
+.slider {
+	background-color: #ddd;
+	height: inherit;
+	overflow: hidden;
+	position: relative;
+	width: inherit;
+	-webkit-box-shadow: 0 0 20px rgba(0, 0, 0, .5);
+	-moz-box-shadow: 0 0 20px rgba(0, 0, 0, .5);
+	-o-box-shadow: 0 0 20px rgba(0, 0, 0, .5);
+	box-shadow: 0 0 20px rgba(0, 0, 0, .5);
+}
+.wrapper > input {
+	display: none;
+}
+.slides {
+	height: inherit;
+	position: absolute;
+	width: inherit;
+}
+
+.slide1 { background-image: url(../img/mb.jpg); }
+.slide2 { background-image: url(../img/lexus.jpg); }
+.slide3 { background-image: url(../img/audi.jpg); }
+.slide4 { background-image: url(../img/finik.jpg); }
+.slide5 { background-image: url(../img/bmw.jpg); }
+.wrapper .controls {
+	left: 50%;
+	margin-left: -98px;
+	position: absolute;
+}
+
+.wrapper label {
+	cursor: pointer;
+	display: inline-block;
+	height: 8px;
+	margin: 25px 12px 0 16px;
+	position: relative;
+	width: 8px;
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	-o-border-radius: 50%;
+	border-radius: 50%;
+}
+
+.wrapper label:after {
+	border: 2px solid #ddd;
+	content: " ";
+	display: block;
+	height: 12px;
+	left: -4px;
+	position: absolute;
+	top: -4px;
+	width: 12px;
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	-o-border-radius: 50%;
+	border-radius: 50%;
+}
+.wrapper label {
+	cursor: pointer;
+	display: inline-block;
+	height: 8px;
+	margin: 25px 12px 0 16px;
+	position: relative;
+	width: 8px;
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	-o-border-radius: 50%;
+	border-radius: 50%;
+	-webkit-transition: background ease-in-out .5s;
+	-moz-transition: background ease-in-out .5s;
+	-o-transition: background ease-in-out .5s;
+	transition: background ease-in-out .5s;
+}
+
+.wrapper label:hover, 
+#slide1:checked ~ .controls label:nth-of-type(1),
+#slide2:checked ~ .controls label:nth-of-type(2),
+#slide3:checked ~ .controls label:nth-of-type(3),
+#slide4:checked ~ .controls label:nth-of-type(4),
+#slide5:checked ~ .controls label:nth-of-type(5) {
+	background: #ddd;
+}
+.slides {
+	height: inherit;
+	opacity: 0;
+	position: absolute;
+	width: inherit;
+	z-index: 0;
+	-webkit-transform: scale(1.5);
+	-moz-transform: scale(1.5);
+	-o-transform: scale(1.5);
+	transform: scale(1.5);
+	-webkit-transition: transform ease-in-out .5s, opacity ease-in-out .5s;
+	-moz-transition: transform ease-in-out .5s, opacity ease-in-out .5s;
+	-o-transition: transform ease-in-out .5s, opacity ease-in-out .5s;
+	transition: transform ease-in-out .5s, opacity ease-in-out .5s;
+}
+
+#slide1:checked ~ .slider > .slide1,
+#slide2:checked ~ .slider > .slide2,
+#slide3:checked ~ .slider > .slide3,
+#slide4:checked ~ .slider > .slide4,
+#slide5:checked ~ .slider > .slide5 {
+	opacity: 1;
+	z-index: 1;
+	-webkit-transform: scale(1);
+	-moz-transform: scale(1);
+	-o-transform: scale(1);
+	transform: scale(1);
+}
+/*подвал*/
+.podval{
+  background-color: #000000;
+}
+.footer-contact {
+  font-family: 'Ubuntu Condensed', sans-serif; 
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    text-align: center;
+    margin-top: 61px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+.footer-contact>div {
+  font-family: 'Ubuntu Condensed', sans-serif;
+    flex-basis: 24%;
+    max-width: 24%;
+}
+.footer-contact h3 {
+  font-family: 'Ubuntu Condensed', sans-serif;
+    color: #FFFFFF ;
+    font-size: 24px;
+}
+.footer-contact-info {
+  font-family: 'Ubuntu Condensed', sans-serif;
+    list-style: none;
+    padding-left: 0;
+    font-size: 24px;
+    color: #c1b26d;
+}
+.footer-contact-info>li {
+  font-family: 'Ubuntu Condensed', sans-serif;
+    margin-bottom: 12px;
+}
+}
+/* Базовый стиль формы */
+form {
+    margin: 0 auto;
+    max-width: 95%;
+    padding: 30px 30px 6px 30px;
+    border: 1px solid rgba(0,0,0,.2);
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    -moz-background-clip: padding;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    background: rgba(0, 0, 0, 0.5); 
+    -moz-box-shadow: 0 0 13px 3px rgba(0,0,0,.5);
+    -webkit-box-shadow: 0 0 13px 3px rgba(0,0,0,.5);
+    box-shadow: 0 0 13px 3px rgba(0,0,0,.5);
+    overflow: hidden;
+  
+}
+/* Поле сообщения */
+textarea{
+    background: rgba(255, 255, 255, 0.4); 
+    width: 100%;
+    height: 110px;
+    border: 1px solid rgba(255,255,255,.6);
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+    -moz-background-clip: padding;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box; 
+    display:block;
+    font-family: 'Open Sans', sans-serif;
+    font-size:18px;
+    font-weight: 300;
+    color:#000000;
+    padding-left:25px;
+    padding-right:20px;
+    padding-top:12px;
+    margin-bottom:20px;
+    overflow:hidden;
+}
+/* Поля ввода */
+input {
+    width: 100%;
+    height: 48px;
+    border: 1px solid rgba(255,255,255,.4);
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+    -moz-background-clip: padding;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box; 
+    display:block;
+    font-family: 'Open Sans', sans-serif;
+    font-size:18px;
+    font-weight: 300;    
+    color:#000000;
+    padding-left:20px;
+    padding-right:20px;
+    margin-bottom:20px;
+}
+input[type=submit] {
+    cursor:pointer;
+}
+input.name {
+    background: rgba(255, 255, 255, 0.4); 
+    padding-left:25px;
+}
+input.email {
+    background: rgba(255, 255, 255, 0.4);
+    padding-left:25px;
+}
+input.message {
+    background: rgba(255, 255, 255, 0.4);
+    padding-left:25px;
+}
+::-webkit-input-placeholder {
+    color: #000000;
+}
+:-moz-placeholder{ 
+    color: #000000; 
+}
+::-moz-placeholder {
+    color: #000000;
+}
+:-ms-input-placeholder {  
+    color: #000000; 
+}
+input:focus, textarea:focus { 
+    background-color: rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0 0 5px 1px rgba(255,255,255,.5);
+    -webkit-box-shadow: 0 0 5px 1px rgba(255,255,255,.5);
+    box-shadow: 0 0 5px 1px rgba(255,255,255,.5);
+    overflow: hidden; 
+}
+/* Стили для кнопки отправить */
+.btn {
+    width: 138px;
+    height: 44px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+    float:right;
+    border: 1px solid #253737;
+    background: #416b68;
+    background: -webkit-gradient(linear, left top, left bottom, from(#6da5a3), to(#416b68));
+    background: -webkit-linear-gradient(top, #6da5a3, #416b68);
+    background: -moz-linear-gradient(top, #6da5a3, #416b68);
+    background: -ms-linear-gradient(top, #6da5a3, #416b68);
+    background: -o-linear-gradient(top, #6da5a3, #416b68);
+    background-image: -ms-linear-gradient(top, #6da5a3 0%, #416b68 100%);
+    padding: 10.5px 21px;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    border-radius: 6px;
+    -webkit-box-shadow: rgba(255,255,255,0.1) 0 1px 0, inset rgba(255,255,255,0.7) 0 1px 0;
+    -moz-box-shadow: rgba(255,255,255,0.1) 0 1px 0, inset rgba(255,255,255,0.7) 0 1px 0;
+    box-shadow: rgba(255,255,255,0.1) 0 1px 0, inset rgba(255,255,255,0.7) 0 1px 0;
+    text-shadow: #333333 0 1px 0;
+    color: #000000;
+}
+.btn:hover {
+    border: 1px solid #253737;
+    text-shadow: #333333 0 1px 0;
+    background: #c1b26d;
+    background: -webkit-gradient(linear, left top, left bottom, from(#77b2b0), to(#416b68));
+    background: -webkit-linear-gradient(top, #77b2b0, #416b68);
+    background: -moz-linear-gradient(top, #77b2b0, #416b68);
+    background: -ms-linear-gradient(top, #77b2b0, #416b68);
+    background: -o-linear-gradient(top, #77b2b0, #416b68);
+    background-image: -ms-linear-gradient(top, #77b2b0 0%, #416b68 100%);
+    color: #000000;
+ }
+.btn:active {
+    margin-top:1px;
+    text-shadow: #333333 0 -1px 0;
+    border: 1px solid #333333;
+    background: #c1b26d;
+    background: -webkit-gradient(linear, left top, left bottom, from(#ffCC00), to(#ff6600));
+    background: -webkit-linear-gradient(top, #ffcc00, #ff6600);
+    background: -moz-linear-gradient(top, #ffcc00, #ff6600);
+    background: -ms-linear-gradient(top, #ffcc00, #ff6600);
+    background: -o-linear-gradient(top, #ffcc00, #ff6600);
+    background-image: -ms-linear-gradient(top, #ffcc00 0%, #ff6600 100%);
+    color: #000000;
+    -webkit-box-shadow: rgba(255,255,255,0) 0 1px 0, inset rgba(255,255,255,0.7) 0 1px 0;
+    -moz-box-shadow: rgba(255,255,255,0) 0 1px 0, inset rgba(255,255,255,0.7) 0 1px 0;
+    box-shadow: rgba(255,255,255,0) 0 1px 0, inset rgba(255,255,255,0.7) 0 1px 0;
+    outline: none;
+}
